@@ -610,7 +610,7 @@ void *cop_mover(int xm, int ym, int but)
   if (o->controller() && o->controller()->freeze_time)
   {
     o->controller()->freeze_time--;
-    if (but || o->controller()->key_down(JK_SPACE) || o->controller()->key_down(JK_ENTER) || o->controller()->key_down(JK_ESC))
+    if (but || o->controller()->key_down(JK_SPACE) || o->controller()->key_down(JK_ENTER))
       o->controller()->freeze_time=0;
   }
   else
@@ -671,18 +671,23 @@ void *cop_mover(int xm, int ym, int but)
       v->add_ammo(v->current_weapon,lnumber_value(ret));
     }
       }
-    } else if (o->aistate()==3)
-    {
-      if (!o->controller() || o->controller()->key_down(JK_SPACE) || o->controller()->key_down(JK_ENTER) || o->controller()->key_down(JK_ESC))
-      {
-        // call the user function to reset the player
-    ((LSymbol *)l_restart_player)->EvalFunction(NULL);
-    o->controller()->reset_player();
-    o->set_aistate(0);
-      } else if (o->controller() && o->controller()->local_player())
-        the_game->show_help(symbol_str("space_cont"));
+    }
+	else if(o->aistate()==3)
+	{
+		//AR "Press SPACEBAR to continue", reset after death
+		if(!o->controller() || o->controller()->key_down(JK_SPACE) || o->controller()->key_down(JK_ENTER))
+		{
+			printf("bla 0\n");
+			// call the user function to reset the player
+			((LSymbol *)l_restart_player)->EvalFunction(NULL);
+			o->controller()->reset_player();
+			o->set_aistate(0);
+		}
+		else if(o->controller() && o->controller()->local_player())
+			the_game->show_help(symbol_str("space_cont"));
 
-    } else o->set_aistate(o->aistate()+1);
+	}
+	else o->set_aistate(o->aistate()+1);
   }
 
   return LNumber::Create(ret);
@@ -1046,6 +1051,8 @@ extern void fade_out(int steps);
 
 void *show_kills()
 {
+	//AR I think this is for multiplayer, the numbers don't match enemies in game
+
   fade_out(8);
   wm->SetMousePos(ivec2(0, 0));
   main_screen->clear();
