@@ -90,10 +90,14 @@ private:
 
 
   Jwindow *top_menu,*joy_win,*last_input;
-  JCFont *game_font;
+  JCFont *game_font;  
   uint8_t keymap[512/8];
 
 public :
+	JCFont *save_game_font;	//AR
+	JCFont *ar_small_font;	//AR
+	JCFont *ar_big_font;	//AR
+
   int key_down(int key) { return keymap[key/8]&(1<<(key%8)); }
   //AR x=1 -> key pressed, x=0 key released
   void set_key_down(int key, int x) { if (x) keymap[key/8]|=(1<<(key%8)); else keymap[key/8]&=~(1<<(key%8)); }
