@@ -207,15 +207,13 @@ bool Settings::CreateConfigFile(std::string file_path)
 	out << std::endl;
 	out << "; Scale window" << std::endl;
 	out << "scale=" << this->scale << std::endl;
+	out << std::endl;	
+	out << "; Enable high resolution screens, buttons and font" << std::endl;
+	out << "hires=" << this->hires << std::endl;
+	out << "big_font=" << this->big_font << std::endl;
 	out << std::endl;
 	out << "; Use linear texture filter (nearest is default)" << std::endl;
 	out << "linear_filter=" << this->linear_filter << std::endl;
-	out << std::endl;
-	out << "; Enable high resolution screens and icons" << std::endl;
-	out << "hires=" << this->hires << std::endl;
-	out << std::endl;
-	out << "; Enable big font on high resolution" << std::endl;
-	out << "big_font=" << this->big_font << std::endl;
 	out << std::endl;
 	//
 	out << "; SOUND SETTINGS" << std::endl;
@@ -223,35 +221,33 @@ bool Settings::CreateConfigFile(std::string file_path)
 	out << "; Volume (0-127)" << std::endl;
 	out << "volume_sound=" << this->volume_sound << std::endl;
 	out << "volume_music=" << this->volume_music << std::endl;
+	out << std::endl;	
+	out << "; Disable music and sound effects" << std::endl;
+	out << "no_music=" << this->no_music << std::endl;
+	out << "no_sound=" << this->no_sound << std::endl;
 	out << std::endl;
 	out << "; Use mono audio only" << std::endl;
 	out << "mono=" << this->mono << std::endl;
 	out << std::endl;
-	out << "; Disable music" << std::endl;
-	out << "no_music=" << this->no_music << std::endl;
-	out << std::endl;
-	out << "; Disable sound effects" << std::endl;
-	out << "no_sound=" << this->no_sound << std::endl;
-	out << std::endl;
 	//
 	out << "; RANDOM SETTINGS" << std::endl;
 	out << std::endl;
-	out << "local_save=" << this->local_save << std::endl;	
-	out << std::endl;
-	out << "; Grab the mouse and keyboard to the window" << std::endl;
-	out << "grab_input=" << this->grab_input << std::endl;
-	out << std::endl;
 	out << "; Enable editor mode" << std::endl;
 	out << "editor=" << this->editor << std::endl;
-	out << std::endl;
-	out << "; Physics update time in ms (65ms/15FPS original)" << std::endl;
-	out << "physics_update=" << this->physics_update << std::endl;
+	out << std::endl;	
+	out << "; Grab the mouse and keyboard to the window" << std::endl;
+	out << "grab_input=" << this->grab_input << std::endl;
 	out << std::endl;
 	out << "; Fullscreen mouse scaling (0 - match desktop, 1 - match game screen)" << std::endl;
 	out << "mouse_scale=" << this->mouse_scale << std::endl;
 	out << std::endl;	
+	out << "; Physics update time in ms (65ms/15FPS original)" << std::endl;
+	out << "physics_update=" << this->physics_update << std::endl;
+	out << std::endl;	
 	out << "; Bullet time (%)" << std::endl;
 	out << "bullet_time=" << (int)(this->bullet_time_add*100) << std::endl;
+	out << std::endl;
+	out << "local_save=" << this->local_save << std::endl;	
 	out << std::endl;
 	//
 	out << "; PLAYER CONTROLS" << std::endl;
